--- a/child/pom.xml
+++ b/child/pom.xml
@@ -4,7 +4,7 @@
                       http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
   <modelVersion>4.0.0</modelVersion>
-  <groupId>org.codehaus.mojo</groupId>
+  <groupId>io.masahiro331</groupId>
   <artifactId>child-project</artifactId>
   <version>1.0</version>
   <packaging>jar</packaging>
@@ -22,4 +22,21 @@
         <version>2.0.1.RELEASE</version>
     </dependency>
   </dependencies>
+  <build>
+    <plugins>
+           <plugin>
+                <groupId>net.unit8.depict</groupId>
+                <artifactId>depict-maven-plugin</artifactId>
+                <version>0.1.0</version>
+                <executions>
+                    <execution>
+                        <id>dependency</id>
+                        <goals>
+                            <goal>dependencies</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+    </plugins>
+  </build>
 </project>
