--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -4,7 +4,7 @@
                       http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
   <modelVersion>4.0.0</modelVersion>
-  <groupId>org.codehaus.mojo</groupId>
+  <groupId>masahiro331.io</groupId>
   <artifactId>parent-project</artifactId>
   <version>1.0</version>
   <packaging>pom</packaging>
